# social-ai-chatbot

./: .env.example  .gitignore  README.md  chainlit.md  chainlit_nl.md  pyproject.toml  run_chainlit.ps1  schema.sql
.chainlit/: config.toml
.files/0b7a9393-8f11-4f90-aff0-5035a0a022b2/: 4c799b41-dd1b-4702-a370-b1acdf4e7198.txt
Celine/: hello.py
Jack/: evaluating_llm.ipynb  example_evaluating_llm.ipynb  triagestatus.py
Jack/data/: dummy_data.jsonl  synthetic_dpo.jsonl  synthetic_train.jsonl
Jack/data/raw/: intake_formulier_casus.txt
Jack/docs/: local_llm.md  project_logs.md  technische_verantwoording.md
Jack/docs/findings/: exp002_instruct_rottermaatje.md  test_casus_intakeformulier.md
Jack/logs/: llm_verantwoording.md  project_logs.md  verantwoording.md
Jack/snippets/: qwen3_(4b)_grpo.py  triagestatus.py
Jack/src/train/: finetune.py  generate_data.py  train_dpo.py
Jack/src/train/colab/: RotterMaatje_Finetuning_Colab.ipynb
data/knowledge/: apv_structured.json
data/processed/: faq_structured.json  synthetic_dpo.jsonl  synthetic_train.jsonl
data/raw/: FAQ vragen 3 doelgroepen.docx  Offensief tegen overlast op straat _ rotterdam.nl.htm  intake_formulier_casus.txt
data/raw/webscraped/: Help mij - Ik zoek hulp bij het Leger des Heils.htm  Openbare orde _ rotterdam.nl.htm  embed_faq.json  knowledge_base_rows.sql
data/raw/webscraped/Help mij - Ik zoek hulp bij het Leger des Heils_files/: anchor.htm  api.js  main.css
data/raw/webscraped/Offensief tegen overlast op straat _ rotterdam.nl_files/: 1538-976deb7ea17f6ab4.js  2067-47fa928143ea8129.js  4677-d751860e09c6f1de.js  5a2841b849dad637.css  7798-715acfe2ca90020f.js  833f35701b28c4dd.css  _buildManifest.js  (+6 more)
docs/: 01_requirements.md  04_model_config.md  Informatievoorziening voor hulpverleners bij de Pauluskerk.docx  Informatievoorziening voor hulpverleners bij de Pauluskerk.md  compliance_check.md  golden_set.jsonl  testcases.csv
docs/experiments/: project_logs.md
docs/experiments/findings/: exp001_baseline_rottermaatje.md  test_casus_intakeformulier.md
docs/presentation/: complexe_casus_intake.txt
scripts/: analyze_train_data.py  check_db.py  deduplicate_db.py  ingest_knowledge.py  training_rate_visualisation.py  verify_ingestion.py
scripts/training/: train_dpo.py
scripts/training/notebooks/: RotterMaatje_Finetuning_Colab.ipynb
src/: agent.py  database.py  main.py  prompts.py
src/agents/: chatbot.py  triage.py
src/core/: llm.py  prompts.py
src/services/: pgvectordb.py  vectordb.py
src/web/: app.py
(+15 files in other folders)
